@@ -1,6 +1,7 @@
 5.4.6
 [add] audio only to quality selection
-[add] Age gate enforcement - Settings -> General
+[add] age gate enforcement - Settings -> General
+[add] allow offensive content - Settings -> General
 [fix/upd] use select dialog for subtitle settings
     - [add] Configure subtitles to Settings -> General
     - [add] Current language with No auto-generated subtitles option
